@@ -1,3 +1,8 @@
+2003-05-19  Jason Merrill  <jason@redhat.com>
+
+	* tree-inline.c (copy_body_r): Avoid generating &* during inline
+	substitution.
+
 2003-05-15  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
 
 	* Makefile.in (regmove.o-warn): Change to -Wno-error.
